<resources>
    <string name="app_name">MyAppPortfolio</string>
    <string name="action_settings">Settings</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="app1">Spotify Steamer</string>
    <string name="app2">Scores App</string>
    <string name="app3">Library App</string>
    <string name="app4">Build it Bigger</string>
    <string name="app5">XYZ Reader</string>
    <string name="app6">Capstone:My own app</string>
</resources>
