<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <TextView android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:textSize="28sp"
        android:id="@+id/textView"
        android:layout_margin="16dp"/>

    <Button
        android:text="@string/app1"
        android:id="@+id/app1_button"
        android:layout_below="@+id/textView"
        style="@style/ButtonStyle"
        android:onClick="spotifySteamer"
        android:background="#a6ea30"/>

    <Button
        android:text="@string/app2"
        android:id="@+id/app2_button"
        android:layout_below="@+id/app1_button"
        style="@style/ButtonStyle"
        android:onClick="scoreApp"
        android:background="#a2e232"/>

    <Button
        android:text="@string/app3"
        android:id="@+id/app3_button"
        android:layout_below="@+id/app2_button"
        style="@style/ButtonStyle"
        android:onClick="libraryApp"
        android:background="#97d42f"/>

    <Button
        android:text="@string/app4"
        android:id="@+id/app4_button"
        android:layout_below="@+id/app3_button"
        style="@style/ButtonStyle"
        android:onClick="builditBigger"
        android:background="#87be29"/>

    <Button
        android:text="@string/app5"
        android:id="@+id/app5_button"
        android:layout_below="@+id/app4_button"
        style="@style/ButtonStyle"
        android:onClick="xyzReader"
        android:background="#7fb425"/>

    <Button
        android:text="@string/app6"
        android:id="@+id/app6_button"
        android:layout_below="@+id/app5_button"
        style="@style/ButtonStyle"
        android:onClick="capstoneApp"
        android:background="#F08C35"/>
</RelativeLayout>
